# urlshortener

./: Cargo.toml
src/: error.rs  id_provider.rs  main.rs
src/adapters/inmemory/: mod.rs
src/app/: mod.rs
src/app/command/: create_short_url.rs
src/app/query/: get_full_url.rs
src/di/: mod.rs
src/ports/httpapi/: mod.rs
