[package]
name = "urlshortner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
axum = "0.8.1"
dashmap = "6.1.0"
http-body-util = "0.1.2"
mime = "0.3.17"
mockall = "0.13.1"
nanoid = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.4"
